Fix car addition bug and change currency to INR
- Fixed issue where adding new cars wasn't updating the collection display
- Updated data loading to prioritize localStorage for current session data
- Added refreshData functionality to main page
- Changed default currency from USD to INR throughout the website
- Added currency formatting helper function
- Updated all price displays to use rupee symbol ()
- Added data persistence info panel in admin
- Improved user feedback messages

--- a/data/config.json
+++ b/data/config.json
@@ -1,6 +1,6 @@
 {
   "adminPassword": "",
   "siteName": "Hot Wheels Collection",
-  "currency": "USD",
+  "currency": "INR",
   "setupRequired": true
 }
