Migrate to Firebase database with real-time sync
- Replace Git storage with Firebase Firestore
- Add Firebase Authentication for secure access
- Add Firebase Storage for image uploads
- Create Firebase configuration UI in admin panel
- Add proper database structure with user isolation
- Include Firebase setup guide
- Maintain localStorage fallback for offline use
- Add real-time data sync across devices
- Implement proper security rules
- Support data export/import functionality

--- a/data/config.json
+++ b/data/config.json
@@ -1,6 +1,6 @@
 {
-  "adminPassword": "",
+  "adminPassword": "YWRtaW4=",
   "siteName": "Hot Wheels Collection",
   "currency": "INR",
-  "setupRequired": true
+  "setupRequired": false
 }
