--- a/data/firebase-config.json
+++ b/data/firebase-config.json
@@ -1,8 +1,10 @@
 {
-  "apiKey": "YOUR_API_KEY",
-  "authDomain": "YOUR_PROJECT_ID.firebaseapp.com",
-  "projectId": "YOUR_PROJECT_ID",
-  "storageBucket": "YOUR_PROJECT_ID.appspot.com",
-  "messagingSenderId": "YOUR_MESSAGING_SENDER_ID",
-  "appId": "YOUR_APP_ID"
+  "_comment": "Replace these values with your actual Firebase project configuration",
+  "_instructions": "Get these values from Firebase Console → Project Settings → Your apps → Web app config",
+  "apiKey": "AIzaSyD_REPLACE_WITH_YOUR_API_KEY",
+  "authDomain": "your-project-id.firebaseapp.com",
+  "projectId": "your-project-id",
+  "storageBucket": "your-project-id.appspot.com",
+  "messagingSenderId": "123456789012",
+  "appId": "1:123456789012:web:replace_with_your_app_id"
 }
