Fix admin password encryption in config.json

--- a/data/config.json
+++ b/data/config.json
@@ -1,5 +1,5 @@
 {
-  "adminPassword": "YWRtaW4=",
+  "adminPassword": "ZmlybnM=",
   "siteName": "Hot Wheels Collection",
   "currency": "INR",
   "setupRequired": false
