Refactor admin authentication to use Firebase-only password storage
- Remove adminPassword from local config.json
- Implement Firebase-based password storage and validation
- Add Admin Password Setup section in admin panel
- Support async password validation from Firebase
- Add password change functionality with current password verification
- Enhance admin login with better setup guidance
- Maintain backward compatibility with local passwords
- Set setupRequired=true to indicate initial setup needed
- Add comprehensive error handling and user feedback

--- a/data/config.json
+++ b/data/config.json
@@ -1,6 +1,5 @@
 {
-  "adminPassword": "ZmlybnM=",
   "siteName": "Hot Wheels Collection",
   "currency": "INR",
-  "setupRequired": false
+  "setupRequired": true
 }
